# crmbar-tauri

./: appveyor.yml
src/: splashscreen.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json~
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
